[gd_scene load_steps=11 format=3 uid="uid://dwfhbf731he3d"]

[ext_resource type="Script" path="res://Scripts/menu/singleplayer_menu.gd" id="1_r8c4t"]
[ext_resource type="Texture2D" uid="uid://dh7h0o16h2ke8" path="res://Assets/Images/Backgrounds/background.jpg" id="2_ls1jg"]
[ext_resource type="Texture2D" uid="uid://iu2kokhhvd44" path="res://Assets/Images/Icons/home.png" id="3_2kpi0"]
[ext_resource type="ButtonGroup" uid="uid://2siss306q4vs" path="res://Resources/ButtonGroups/mode_group.tres" id="4_gihp2"]
[ext_resource type="ButtonGroup" uid="uid://3x7ej8tei6hy" path="res://Resources/ButtonGroups/race_group.tres" id="5_2rkyq"]
[ext_resource type="Texture2D" uid="uid://bdwgg4qemnnwp" path="res://Assets/Sprites/Cars/Small/car_black_small_1.png" id="6_k36jx"]
[ext_resource type="Texture2D" uid="uid://cemerveveo73o" path="res://Assets/Sprites/Cars/Small/car_black_small_2.png" id="7_wyt7w"]
[ext_resource type="Texture2D" uid="uid://b87fcxioxikq1" path="res://Assets/Sprites/Cars/Small/car_black_small_3.png" id="8_l10as"]
[ext_resource type="Texture2D" uid="uid://j8by1m0vqv6l" path="res://Assets/Sprites/Cars/Small/car_black_small_4.png" id="9_wmipw"]
[ext_resource type="Texture2D" uid="uid://ypl6sxp0ucjt" path="res://Assets/Sprites/Cars/Small/car_black_small_5.png" id="10_2ogfx"]

[node name="Singleplayer" type="CanvasLayer"]
script = ExtResource("1_r8c4t")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -1012.5
offset_right = 1920.0
offset_bottom = 1012.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ls1jg")
expand_mode = 2
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer/Top"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_2kpi0")

[node name="Selection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Mode" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Selection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ModeLabel" type="Label" parent="MarginContainer/VBoxContainer/Selection/Mode"]
layout_mode = 2
size_flags_horizontal = 0
text = "Mode"

[node name="Chrono" type="Button" parent="MarginContainer/VBoxContainer/Selection/Mode"]
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
button_pressed = true
button_group = ExtResource("4_gihp2")
text = "Chrono"

[node name="AI" type="Button" parent="MarginContainer/VBoxContainer/Selection/Mode"]
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
button_group = ExtResource("4_gihp2")
text = "AI"

[node name="Race" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Selection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RaceLabel" type="Label" parent="MarginContainer/VBoxContainer/Selection/Race"]
layout_mode = 2
text = "Race"

[node name="Hungaroring" type="Button" parent="MarginContainer/VBoxContainer/Selection/Race"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_2rkyq")
text = "Hungaroring"

[node name="PaulRicard" type="Button" parent="MarginContainer/VBoxContainer/Selection/Race"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_2rkyq")
text = "PaulRicard"

[node name="Cars" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Selection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CarsLabel" type="Label" parent="MarginContainer/VBoxContainer/Selection/Cars"]
layout_mode = 2
text = "Cars"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Selection/Cars"]
layout_mode = 2
columns = 3

[node name="CarGreen" type="Button" parent="MarginContainer/VBoxContainer/Selection/Cars/GridContainer"]
layout_mode = 2
icon = ExtResource("6_k36jx")

[node name="CarGreen2" type="Button" parent="MarginContainer/VBoxContainer/Selection/Cars/GridContainer"]
layout_mode = 2
icon = ExtResource("7_wyt7w")

[node name="CarGreen3" type="Button" parent="MarginContainer/VBoxContainer/Selection/Cars/GridContainer"]
layout_mode = 2
icon = ExtResource("8_l10as")

[node name="CarGreen4" type="Button" parent="MarginContainer/VBoxContainer/Selection/Cars/GridContainer"]
layout_mode = 2
icon = ExtResource("9_wmipw")

[node name="CarGreen5" type="Button" parent="MarginContainer/VBoxContainer/Selection/Cars/GridContainer"]
layout_mode = 2
icon = ExtResource("10_2ogfx")

[node name="Confirmation" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Difficulty" type="OptionButton" parent="MarginContainer/VBoxContainer/Confirmation"]
unique_name_in_owner = true
layout_mode = 2

[node name="Race" type="Button" parent="MarginContainer/VBoxContainer/Confirmation"]
layout_mode = 2
text = "RACE"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Top/Menu" to="." method="_on_menu_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Selection/Mode/Chrono" to="." method="_on_chrono_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Selection/Mode/AI" to="." method="_on_ai_button_down"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Confirmation/Difficulty" to="." method="_on_difficulty_item_selected"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Confirmation/Race" to="." method="_on_race_button_down"]
